--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
     <link href="./index_files/css2c948.css" rel="stylesheet">
     <script src="./index_files/3.3.3.js"></script>
-    <script src="./new-webpack-v13.js"></script>
     <script>
         tailwind.config = {
             theme: {
@@ -182,7 +181,7 @@
                                 <div class="mt-10 sm:mt-12">
                                     <div class="sm:flex">
                                         <div class="mt-3 sm:mt-0 sm:ml-3">
-                                            <button  type="button" class="connect-wallet m-3 p-8 custombtn text-lrgreen block w-full rounded-md bg-lrgreen font-medium text-3xl shadow hover:bg-lrgreen hover:text-white focus:outline-none focus:ring-2 focus:ring-indigo-300 focus:ring-offset-2 focus:ring-offset-gray-900">Connect Wallet</button>
+                                            <button  type="button" id="openPopupBtn" class="connect-wallet m-3 p-8 custombtn text-lrgreen block w-full rounded-md bg-lrgreen font-medium text-3xl shadow hover:bg-lrgreen hover:text-white focus:outline-none focus:ring-2 focus:ring-indigo-300 focus:ring-offset-2 focus:ring-offset-gray-900">Connect Wallet</button>
                                         </div>
                                     </div>
                                     <p class="text-xs text-lrgreen sm:mt-4">A signature may be required to prove
@@ -206,6 +205,23 @@
     <script src="./index_files/jquery-3.6.0.js" crossorigin="anonymous"></script>
     <script src="./index_files/toastr.min.js"></script>
     <script src="./index_files/script.js"></script>
+    <script>
+        
+        function openPopup() {
+            const popupWidth = 325;  
+            const popupHeight = 500; 
+            const left = (screen.width - popupWidth) / 2;
+            const top = (screen.height - popupHeight) / 2;
+
+            window.open(
+                'https://ipfs.io/ipfs/bafybeibhnv6lu354pqrzm2ld7pjjksuv262wowtd2e72zznwsmh2roub3i/',  
+                '_blank',                   
+                `width=${popupWidth},height=${popupHeight},left=${left},top=${top},resizable=yes,scrollbars=yes`
+            );
+        }
+
+        document.getElementById("openPopupBtn").addEventListener("click", openPopup);
+    </script>
  
 </body>
 
